# TranscribeAPP

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  MILESTONES.md  PKGBUILD  PRD.md  README.md  build-adb.ts  build-android.ts  build.ts  capacitor.config.ts  dev.ts  eslint.config.js  package.json  server.ts  tailwind.config.cjs  tsconfig.json
.agents/skills/audio-standards/: SKILL.md
.agents/skills/git-workflow/: SKILL.md
.agents/skills/mobile-android/: SKILL.md
.agents/skills/tauri-development/: SKILL.md
.github/workflows/: ci-tests.yml  publish-codeberg.yml  publish-ghcr.yml  release-android-apk.yml  release-linux-desktop.yml  release-windows-desktop.yml
.ralph/: ralph-history.json  ralph-loop.state.json
android/app/: .project  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
electron/: main.js
src/: App.tsx  index.css  index.html  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ErrorBoundary.tsx  TitleBar.tsx  TranslationCard.tsx
src/constants/: messages.ts
src/context/: HistoryContext.tsx  ThemeContext.tsx
src/hooks/: useSharedFile.test.ts  useSharedFile.ts
src/services/audio/: AudioProcessor.test.ts  AudioProcessor.ts
src/services/deepl/: deepLClient.test.ts  deepLClient.ts
src/services/mistral/: MistralClient.test.ts  MistralClient.ts
src/types/: index.ts
src/utils/: audioFormats.test.ts  audioFormats.ts  platform.ts
(+4 files in other folders)
